# MPC

./: .clang-format  CMakeLists.txt  do  run.sh
benchmark/: FCNN.cc  FCNN_MPC.cc  FcnnNode.cc
include/: A2BProtocol.h  AddProtocol.h  B2AProtocol.h  CipherData.h  DotProductProtocol.h  JMPProtocol.h  Matrix.h  MulProtocol.h  NetworkNode.h  PCNode.h  ReSharingProtocol.h  RecProtocol.h  SharedMemory.h  SharingProtocol.h  Timer.h  TruncationProtocol.h  Type.h  Util.h  ctpl_stl.h
src/: A2BProtocol.cc  AddProtocol.cc  B2AProtocol.cc  DotProductProtocol.cc  JMPProtocol.cc  MulProtocol.cc  NetworkNode.cc  PCNode.cc  ProcessA2B.cc  ProcessTrun.cc  ReSharingProtocol.cc  RecProtocol.cc  SharedMemory.cc  SharingProtocol.cc  TruncationProtocol.cc  Util.cc
tests/: A2BNode.cc  B2ANode.cc  DotProductNode.cc  MulNode.cc  ReShareNode.cc  RecNode.cc  ShareNode.cc  TrunNode.cc
